--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HYDROTECH Waterproofing Solutions</title>
+  <title>HYDROTECH Waterproofing Solutions</title>
+<meta name="description" content="Expert waterproofing services for terraces, roofs, bathrooms, and basements. Trusted by homeowners and builders.">
 
   <!-- ✅ Google Site Verification -->
   <meta name="google-site-verification" content="uohmTrwbvGhlRq4ArGRaicuRaWYwWpQtf9GHc9rNBi0" />
